--- a/src/app/pages/login/layout/login.component.html
+++ b/src/app/pages/login/layout/login.component.html
@@ -6,10 +6,10 @@
             <input placeholder="username" type="text" id="username">
         </label>
         <label for="">
-            <i class="fa-solid fa-lock fa-bounce"></i>
+            <i class="fa-ssolid fa-lock fa-bounce"></i>
             <input placeholder="password" type="password" id="password">
         </label>
-        <a href="" class="link"> ¿Olvidaste tu contraseña? </a>
-        <button id="button">Login</button>
+        <a href="" class="link" > ¿Olvidaste tu contraseña? </a>
+        <button id="button" [routerLink]="['/home']">Login</button>
     </form>
 </body>
