--- a/src/app/pages/layout/home/home.component.html
+++ b/src/app/pages/layout/home/home.component.html
@@ -7,7 +7,21 @@
             <app-toolbar></app-toolbar>
         </div>
         <div class="col-9">
-            <router-outlet></router-outlet>
+            <router-outlet name="p"></router-outlet>
+            <!-- <div>
+                <p class="center">
+                    Este es un sistema diseñado para ayudarte en la administración y manejo 
+                    de los datos de tus estudiantes de manera efectiva y eficiente.
+                </p>
+                <p class="center">
+                    Esperamos que este programa de gestión de usuarios de alumnos te sea de gran utilidad en tus 
+                    labores académicas y administrativas. 
+                </p>   
+                <h3 class="center mt-5">
+                    ¡Gracias por elegir nuestro software y que tengas una 
+                    excelente experiencia de uso!
+                </h3>
+            </div> -->
         </div>
     </div>
 </div>
