--- a/src/app/pages/users/user-add/user-add.component.html
+++ b/src/app/pages/users/user-add/user-add.component.html
@@ -1,1 +1,16 @@
-<p>user-add works!</p>
+<div class="container">
+    <div class="row">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <app-toolbar></app-toolbar>
+        </div>
+        <div class="col-9">
+            <!-- Aca va el contenido del componente -->
+
+
+
+        </div>
+    </div>
+</div>
