--- a/src/app/pages/users/user-list/user-list.component.html
+++ b/src/app/pages/users/user-list/user-list.component.html
@@ -1,57 +1,71 @@
-<div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="container">
+    <div class="row">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <app-toolbar></app-toolbar>
+        </div>
+        <div class="col-9">
+          <div>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          
+                <!--- Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" -->
+            
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                  <th mat-header-cell *matHeaderCellDef> No. </th>
+                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                </ng-container>
+            
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+            
+                <!-- Weight Column -->
+                <ng-container matColumnDef="weight">
+                  <th mat-header-cell *matHeaderCellDef> Curso </th>
+                  <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+                </ng-container>
+            
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="symbol">
+                  <th mat-header-cell *matHeaderCellDef> Estado </th>
+                  <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+                </ng-container>
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table> 
+            <div class="row mt-3">
+              <div class="col">
+                <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/delete']">
+                  <button type="button" class="btn btn-danger mb-2 w-100">
+                      Eliminar Usuario
+                  </button>
+                </a>
+              </div>
+              <div class="col">
+                <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/edit']">
+                  <button type="button" class="btn btn-primary mb-2 w-100">
+                      Editar Usurio
+                  </button>
+                </a>
+              </div>
+              <div class="col">
+                <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/add']">
+                  <button type="button" class="btn btn-success mb-2 w-100">
+                      Agregar Usurio
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
 
-      <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-  
-      <!-- Weight Column -->
-      <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Curso </th>
-        <td mat-cell *matCellDef="let element"> {{element.course}} </td>
-      </ng-container>
-  
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Estado </th>
-        <td mat-cell *matCellDef="let element"> {{element.state}} </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table> 
-  <div class="row mt-3">
-    <div class="col">
-      <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/delete']">
-        <button type="button" class="btn btn-danger mb-2 w-100">
-            Eliminar Usuario
-        </button>
-      </a>
+
+        </div>
     </div>
-    <div class="col">
-      <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/edit']">
-        <button type="button" class="btn btn-primary mb-2 w-100">
-            Editar Usurio
-        </button>
-      </a>
-    </div>
-    <div class="col">
-      <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/add']">
-        <button type="button" class="btn btn-success mb-2 w-100">
-            Agregar Usurio
-        </button>
-      </a>
-    </div>
-  </div>
 </div>
