--- a/src/app/pages/layout/login/login.component.html
+++ b/src/app/pages/layout/login/login.component.html
@@ -10,6 +10,6 @@
             <input placeholder="password" type="password" id="password">
         </label>
         <a href="" class="link"> ¿Olvidaste tu contraseña? </a>
-        <button id="button" [routerLink]="['/list']">Login</button>
+        <button id="button" [routerLink]="['/home']">Login</button>
     </form>
 </body>
