--- a/src/app/pages/users/user-add/user-add.component.html
+++ b/src/app/pages/users/user-add/user-add.component.html
@@ -9,7 +9,55 @@
         <div class="col-9">
             <!-- Aca va el contenido del componente -->
 
+            <!-- Main -->
+            <main id="contacto-formulario">
+                <div class="container fuente" data-aos="fade-up">
 
+                    <div class="row">
+                        <div class="col d-flex align-items-center justify-content-md-start">
+                            <p class="mb-4 me-5">
+                                Aca puedes registrar a un estudiante
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-10 offset-md-1 contact rounded-2">
+                            <form #formContacto="ngForm" (ngSubmit)="onSubmit()">
+
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label p">Nombre</label>
+                                    <input type="text" name="nombre" #nombre="ngModel" [(ngModel)]="usuario.nombre" required pattern="[a-zA-Z]+"
+                                    class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"/>
+                                    <span  *ngIf="nombre.touched && !nombre.valid">
+                                        El nombre es obligatorio
+                                    </span>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="apellidos" class="form-label p">Curso</label>
+                                    <input type="text" name="apellidos" #apellidos="ngModel" [(ngModel)]="usuario.apellidos" required pattern="[a-zA-Z]+" 
+                                    class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                                    <span  *ngIf="apellidos.touched && !apellidos.valid">
+                                        el curso no es valido 
+                                    </span>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="email" class="form-label p">Estado</label>
+                                    <input type="text" name="email" #email="ngModel" [(ngModel)]="usuario.email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" 
+                                    required/>
+                                    <span  *ngIf="email.touched && !email.valid">
+                                        El estado no es valido 
+                                    </span>
+                                </div>
+
+                                <button type="submit" value="Enviar" [disabled]="!formContacto.form.valid" class="btn btn-success" data-aos="fade-left">Agregar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </main>
+            <!-- /Main -->
 
         </div>
     </div>
