--- a/src/app/common/toolbar/toolbar.component.html
+++ b/src/app/common/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
         </a>
         <a class="text-toolbar" [routerLink]="['/form']">
             <button type="button" class="btn btn-primary mb-2 w-100">
-                Formulario
+                Contacto
             </button>
         </a>
     </div>
