full login firebase

--- a/src/app/pages/users/user-edit/user-edit.component.html
+++ b/src/app/pages/users/user-edit/user-edit.component.html
@@ -1,16 +1,1 @@
-<div class="container">
-    <div class="row">
-        <app-navbar></app-navbar>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <app-toolbar></app-toolbar>
-        </div>
-        <div class="col-9">
-            <!-- Aca va el contenido del componente -->
-
-
-
-        </div>
-    </div>
-</div>
+<p>user-edit works!</p>
