--- a/src/app/pages/layout/toolbar/toolbar.component.html
+++ b/src/app/pages/layout/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col">
+
         <a class="text-toolbar" [routerLink]="['/list']">
         <button type="button" class="btn btn-primary mb-2 w-100">
             Lista de Estudiantes
@@ -7,7 +8,7 @@
         </a>
         <a class="text-toolbar" [routerLink]="['/form']">
             <button type="button" class="btn btn-primary mb-2 w-100">
-                Contacto
+                Formulario
             </button>
         </a>
     </div>
