--- a/src/app/components/dashboard/layout/toolbar/toolbar.component.html
+++ b/src/app/components/dashboard/layout/toolbar/toolbar.component.html
@@ -11,5 +11,10 @@
                 Formulario
             </button>
         </a>
+        <a class="text-toolbar" [routerLink]="['/form']">
+            <button type="button" class="btn btn-warning mb-2 w-100">
+                Salir
+            </button>
+        </a>
     </div>
 </div>
