route-users-child

--- a/src/app/components/layout/toolbar/toolbar.component.html
+++ b/src/app/components/layout/toolbar/toolbar.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col">
 
-        <a class="text-toolbar" [routerLink]="['/list']">
+        <a class="text-toolbar" [routerLink]="['/dashboard']">
         <button type="button" class="btn btn-primary mb-2 w-100">
             Lista de Estudiantes
         </button>
         </a>
-        <a class="text-toolbar" [routerLink]="['/form']">
+        <a class="text-toolbar" [routerLink]="['/formulario-contacto']">
             <button type="button" class="btn btn-primary mb-2 w-100">
                 Formulario
             </button>
         </a>
-        <a class="text-toolbar" [routerLink]="['/form']">
+        <a class="text-toolbar" [routerLink]="['/salir']">
             <button type="button" class="btn btn-warning mb-2 w-100">
                 Salir
             </button>
