--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -43,21 +43,21 @@
                 </table> 
                 <div class="row mt-3">
                     <div class="col">
-                        <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/delete']">
+                        <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/delete']">
                         <button type="button" class="btn btn-danger mb-2 w-100">
                             Eliminar Usuario
                         </button>
                         </a>
                     </div>
                     <div class="col">
-                        <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/edit']">
+                        <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/edit']">
                         <button type="button" class="btn btn-primary mb-2 w-100">
                             Editar Usurio
                         </button>
                         </a>
                     </div>
                     <div class="col">
-                        <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/list/add']">
+                        <a class="text-toolbar d-flex justify-content-end" [routerLink]="['/add']">
                         <button type="button" class="btn btn-success mb-2 w-100">
                             Agregar Usurio
                         </button>
