tool and navbar manag. users

--- a/src/app/components/users/user-add/user-add.component.html
+++ b/src/app/components/users/user-add/user-add.component.html
@@ -1,1 +1,13 @@
-<p>user-add works!</p>
+<div class="container">
+    <div class="row">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <app-toolbar></app-toolbar>
+        </div>
+        <div class="col-9">
+            <p>user-add works!</p>
+        </div>
+    </div>
+</div>
