--- a/src/app/components/users/user-edit/user-edit.component.html
+++ b/src/app/components/users/user-edit/user-edit.component.html
@@ -1,1 +1,14 @@
-<p>user-edit works!</p>
+<div class="container">
+    <div class="row">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <app-toolbar></app-toolbar>
+        </div>
+        <div class="col-9">
+            <p>user-edit works!</p>
+        </div>
+    </div>
+</div>
+
