--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,9 +1,5 @@
 <nav class="navbar color-navbar rounded-2 mb-2">
     <div class="container-fluid">
-    <a class="navbar-brand">Gestión de Alumnos</a>
-    <form class="d-flex" role="search">
-        <input class="form-control me-3" type="search" placeholder="Buscar" aria-label="Search">
-        <button type="button" class="btn btn-outline-light" type="submit">Buscar</button>
-    </form>
+    <a class="navbar-brand">CRUD Empleados con Angular</a>
     </div>
 </nav>
