--- a/src/app/components/users/user-form/user-form.component.html
+++ b/src/app/components/users/user-form/user-form.component.html
@@ -61,6 +61,7 @@
                 </div>
             </main>
             <!-- /Main -->
+            <app-toolbar></app-toolbar>
 
         </div>
     </div>
