--- a/src/app/components/users/user-list/user-list.component.css
+++ b/src/app/components/users/user-list/user-list.component.css
@@ -5,3 +5,10 @@ table {
 a.text-toolbar {
     text-decoration: none;
 }
+
+.example-spacer {
+    flex: 1 1 auto;
+}
+.mat-form-field {
+    width: 100%;
+}
