--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,5 +1,9 @@
-<nav class="navbar color-navbar rounded-2 mb-2">
-    <div class="container-fluid">
-    <a class="navbar-brand">CRUD Empleados con Angular</a>
-    </div>
-</nav>
+<mat-toolbar class="navbar-1">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span>CRUD DE EMPLEADOS</span>
+    <span class="example-spacer"></span>
+</mat-toolbar>
+
+
