--- a/src/app/components/layout/navbar/navbar.component.css
+++ b/src/app/components/layout/navbar/navbar.component.css
@@ -1,11 +1,12 @@
-.navbar {
+.navbar-1 {
     margin-top: 1.5rem;
-}
-.color-navbar {
     background-color: #0d6efd;
-}
-.navbar-brand {
     color: aliceblue;
-    font-size:  2rem;
-    margin-left: 1rem;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.example-spacer {
+    margin-right: 1rem;
 }
